fixed scrollbars on other elements

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -55,6 +55,21 @@
 * {
   margin: 0;
   padding: 0;
+
+  ::-webkit-scrollbar {
+    width: 12px;
+    background: transparent;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #222222;
+    border-radius: 20px;
+    border: 2px solid #333;
+  }
 }
 
 html,
@@ -72,24 +87,9 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  ::-webkit-scrollbar {
-    width: 12px;
-  }
-
-  ::-webkit-scrollbar-track {
-    background: transparent;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    background-color: #222222;
-    border-radius: 20px;
-    border: 2px solid #333;
-  }
 }
 
 a {
@@ -129,6 +129,7 @@ a {
   width: 100%;
   margin: 0 !important;
   padding: 0 !important;
+  overflow: hidden;
 }
 
 .jumbotron,
